Fix spacing in lists

--- a/src/css/markdown.css
+++ b/src/css/markdown.css
@@ -2,16 +2,12 @@
 .markdown ol,
 article ol {
   margin-inline: auto;
-  display: flex;
-  flex-direction: column;
-  gap: theme(spacing.2);
   max-width: theme(maxWidth.md);
   list-style-type: decimal;
 }
 
 .markdown ol li,
 article ol li {
-  margin-top: theme(spacing.4);
   margin-left: theme(spacing.7);
 }
 
